<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/cinzelreg"
            android:padding="8dp"
            android:text="Certamen"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/description"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cinzelreg"
            android:text="@string/Tossup_label"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/question_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cinzelreg"
            android:gravity="center"
            android:padding="4dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/outer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/cinzelreg"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/TeamA"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/cinzelreg"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/tossupA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"

                    android:onClick="tossUpForTeamA"
                    android:text="Toss-up" />

                <Button
                    android:id="@+id/bonusA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"

                    android:onClick="bonusForTeamA"
                    android:text="Bonus" />


            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/cinzelreg"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/TeamB"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"

                    android:fontFamily="@font/cinzelreg"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/tossupB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"

                    android:onClick="tossUpForTeamB"
                    android:text="Toss-up" />

                <Button
                    android:id="@+id/bonusB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="bonusForTeamB"
                    android:text="Bonus" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="reset"
        android:text="Reset"

        />

</RelativeLayout>
